--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Android5.0新特性</string>
     <string name="recycler_view">RecyclerView</string>
     <string name="card_view">CardView</string>
+    <string name="notification">Notification</string>
 </resources>
